--- a/places-generator/package.json
+++ b/places-generator/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "core-js": "^2.5.4",
+    "cropperjs": "^1.4.3",
     "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
   },
