--- a/places-generator/package.json
+++ b/places-generator/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "core-js": "^2.5.4",
     "cropperjs": "^1.4.3",
+    "jquery": "^3.3.1",
     "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
   },
