--- a/places-generator/package.json
+++ b/places-generator/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "@types/html2canvas": "0.0.35",
     "core-js": "^2.5.4",
     "cropperjs": "^1.4.3",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.1",
     "jquery": "^3.3.1",
     "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
@@ -33,6 +36,7 @@
     "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
