--- a/places-generator/package.json
+++ b/places-generator/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "@types/html2canvas": "0.0.35",
+    "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
     "cropperjs": "^1.4.3",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.1",
+    "firebase": "^5.8.5",
     "jquery": "^3.3.1",
     "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
